cc : Fix damage rect bug caused by deletion of render surface

The damage tracker tracks if a layer contributed as a layer or surface
and when a surface is removed, it is added to the damage rect.

BUG=611230
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review-Url: https://codereview.chromium.org/1976413002
Cr-Commit-Position: refs/heads/master@{#393966}

Former-commit-id: cf22376f77a6c31d4f144f00826b687864031d46